projects/vb6parse/snapshots/parsers/cst/library/financial/fv/fv_formatcurrency.snap
---
source: projects/vb6parse/tests/library/financial/fv.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: MemberAccessExpression
          children:
            - kind: Identifier
              text: lblResult
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: Caption
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: StringLiteralExpression
              children:
                - kind: StringLiteral
                  text: "\"Future Value: \""
            - kind: Whitespace
              text: " "
            - kind: Ampersand
              text: "&"
            - kind: Whitespace
              text: " "
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: FormatCurrency
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: Fv
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: rate
                                - kind: Comma
                                  text: ","
                                - kind: Whitespace
                                  text: " "
                                - kind: Argument
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: periods
                                - kind: Comma
                                  text: ","
                                - kind: Whitespace
                                  text: " "
                                - kind: Argument
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: payment
                            - kind: RightParenthesis
                              text: )
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "2"
                - kind: RightParenthesis
                  text: )
